@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-28T16:14:03Z",
-  "count" : 3,
+  "timestamp" : "2023-08-11T08:13:32Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +3 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
