@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-08-08T08:14:06Z",
+  "timestamp" : "2023-08-11T08:13:32Z",
   "count_outdated" : 155,
   "uniques_outdated" : 130,
-  "count" : 168,
-  "uniques" : 142,
+  "count" : 169,
+  "uniques" : 143,
   "clones" : [
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-07-29T00:00:00Z",
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2023-08-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-11T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
