@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-07-28T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2023-07-29T00:00:00Z",
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2023-08-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-11T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
